@@ -219,7 +219,8 @@ static void prCachedName(FILE *fp, nameDef *nd, const char *prefix);
 static void generateSignalTableEntry(classDef *cd, overDef *sig, int membernr,
         FILE *fp);
 static void generateTypesTable(sipSpec *pt, moduleDef *mod, FILE *fp);
-static int py2SlotOnly(slotType st);
+static int py2OnlySlot(slotType st);
+static int py2_5LaterSlot(slotType st);
 static int keepPyReference(argDef *ad);
 static int isDuplicateProtected(classDef *cd, overDef *target);
 static char getEncoding(argType atype);
@@ -1249,16 +1250,20 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
             for (od = mod->overs; od != NULL; od = od->next)
                 if (od->common == md)
                 {
-                    if (py2SlotOnly(md->slot))
+                    if (py2OnlySlot(md->slot))
                         prcode(fp,
 "#if PY_MAJOR_VERSION < 3\n"
+                            );
+                    else if (py2_5LaterSlot(md->slot))
+                        prcode(fp,
+"#if PY_VERSION_HEX >= 0x02050000\n"
                             );
 
                     prcode(fp,
 "    {(void *)slot_%s, %s, {0, 0, 0}},\n"
                         , md->pyname->text, slotName(md->slot));
 
-                    if (py2SlotOnly(md->slot))
+                    if (py2OnlySlot(md->slot) || py2_5LaterSlot(md->slot))
                         prcode(fp,
 "#endif\n"
                             );
@@ -1270,9 +1275,13 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
         for (cd = mod->proxies; cd != NULL; cd = cd->next)
             for (md = cd->members; md != NULL; md = md->next)
             {
-                if (py2SlotOnly(md->slot))
+                if (py2OnlySlot(md->slot))
                     prcode(fp,
 "#if PY_MAJOR_VERSION < 3\n"
+                        );
+                else if (py2_5LaterSlot(md->slot))
+                    prcode(fp,
+"#if PY_VERSION_HEX >= 0x02050000\n"
                         );
 
                 prcode(fp,
@@ -1283,7 +1292,7 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
                 prcode(fp, "},\n"
                       );
 
-                if (py2SlotOnly(md->slot))
+                if (py2OnlySlot(md->slot) || py2_5LaterSlot(md->slot))
                     prcode(fp,
 "#endif\n"
                         );
@@ -1360,16 +1369,20 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
 
             if ((stype = slotName(slot->slot)) != NULL)
             {
-                if (py2SlotOnly(slot->slot))
+                if (py2OnlySlot(slot->slot))
                     prcode(fp,
 "#if PY_MAJOR_VERSION < 3\n"
+                        );
+                else if (py2_5LaterSlot(slot->slot))
+                    prcode(fp,
+"#if PY_VERSION_HEX >= 0x02050000\n"
                         );
 
                 prcode(fp,
 "    {(void *)slot_%C_%s, %s},\n"
                     , ed->fqcname, slot->pyname->text, stype);
 
-                if (py2SlotOnly(slot->slot))
+                if (py2OnlySlot(slot->slot) || py2_5LaterSlot(slot->slot))
                     prcode(fp,
 "#endif\n"
                         );
@@ -4369,8 +4382,9 @@ static int isZeroArgSlot(memberDef *md)
 
     return (st == str_slot || st == int_slot || st == long_slot ||
         st == float_slot || st == invert_slot || st == neg_slot ||
-        st == len_slot || st == nonzero_slot || st == pos_slot ||
-        st == abs_slot || st == repr_slot || st == hash_slot);
+        st == len_slot || st == bool_slot || st == pos_slot ||
+        st == abs_slot || st == repr_slot || st == hash_slot ||
+        st == index_slot);
 }
 
 
@@ -4405,7 +4419,7 @@ int isIntReturnSlot(memberDef *md)
 {
     slotType st = md->slot;
 
-    return (st == len_slot || st == nonzero_slot || st == contains_slot ||
+    return (st == len_slot || st == bool_slot || st == contains_slot ||
         st == cmp_slot);
 }
 
@@ -4440,9 +4454,9 @@ static int isInplaceNumberSlot(memberDef *md)
     slotType st = md->slot;
 
     return (st == iadd_slot || st == isub_slot || st == imul_slot ||
-        st == idiv_slot || st == imod_slot ||
-        st == ior_slot || st == ixor_slot || st == iand_slot ||
-        st == ilshift_slot || st == irshift_slot);
+        st == idiv_slot || st == imod_slot || st == ifloordiv_slot ||
+        st == itruediv_slot || st == ior_slot || st == ixor_slot ||
+        st == iand_slot || st == ilshift_slot || st == irshift_slot);
 }
 
 
@@ -4465,9 +4479,9 @@ int isNumberSlot(memberDef *md)
     slotType st = md->slot;
 
     return (st == add_slot || st == sub_slot || st == mul_slot ||
-        st == div_slot || st == mod_slot ||
-        st == and_slot || st == or_slot || st == xor_slot ||
-        st == lshift_slot || st == rshift_slot);
+        st == div_slot || st == mod_slot || st == floordiv_slot ||
+        st == truediv_slot || st == and_slot || st == or_slot ||
+        st == xor_slot || st == lshift_slot || st == rshift_slot);
 }
 
 
@@ -4563,9 +4577,13 @@ static void generateSlot(moduleDef *mod, classDef *cd, enumDef *ed,
 "\n"
         );
 
-    if (py2SlotOnly(md->slot))
+    if (py2OnlySlot(md->slot))
         prcode(fp,
 "#if PY_MAJOR_VERSION < 3\n"
+            );
+    else if (py2_5LaterSlot(md->slot))
+        prcode(fp,
+"#if PY_VERSION_HEX >= 0x02050000\n"
             );
 
     if (!generating_c)
@@ -4704,7 +4722,7 @@ static void generateSlot(moduleDef *mod, classDef *cd, enumDef *ed,
 "}\n"
         );
 
-    if (py2SlotOnly(md->slot))
+    if (py2OnlySlot(md->slot) || py2_5LaterSlot(md->slot))
         prcode(fp,
 "#endif\n"
             );
@@ -8182,16 +8200,20 @@ static void generateTypeDefinition(sipSpec *pt, classDef *cd, FILE *fp)
 
         if ((stype = slotName(md->slot)) != NULL)
         {
-            if (py2SlotOnly(md->slot))
+            if (py2OnlySlot(md->slot))
                 prcode(fp,
 "#if PY_MAJOR_VERSION < 3\n"
+                    );
+            else if (py2_5LaterSlot(md->slot))
+                prcode(fp,
+"#if PY_VERSION_HEX >= 0x02050000\n"
                     );
 
             prcode(fp,
 "    {(void *)slot_%C_%s, %s},\n"
                 , classFQCName(cd), md->pyname->text, stype);
 
-            if (py2SlotOnly(md->slot))
+            if (py2OnlySlot(md->slot) || py2_5LaterSlot(md->slot))
                 prcode(fp,
 "#endif\n"
                     );
@@ -8766,9 +8788,19 @@ static void generateSignalTableEntry(classDef *cd, overDef *sig, int membernr,
 /*
  * Return TRUE if the slot is specific to Python v2.
  */
-static int py2SlotOnly(slotType st)
+static int py2OnlySlot(slotType st)
 {
-    return (st == long_slot || st == cmp_slot);
+    return (st == long_slot || st == cmp_slot || st == div_slot ||
+            st == idiv_slot);
+}
+
+
+/*
+ * Return TRUE if the slot is specific to Python v2.5 and later.
+ */
+static int py2_5LaterSlot(slotType st)
+{
+    return (st == index_slot);
 }
 
 
@@ -8833,6 +8865,14 @@ static const char *slotName(slotType st)
         sn = "mod_slot";
         break;
 
+    case floordiv_slot:
+        sn = "floordiv_slot";
+        break;
+
+    case truediv_slot:
+        sn = "truediv_slot";
+        break;
+
     case and_slot:
         sn = "and_slot";
         break;
@@ -8879,6 +8919,14 @@ static const char *slotName(slotType st)
 
     case imod_slot:
         sn = "imod_slot";
+        break;
+
+    case ifloordiv_slot:
+        sn = "ifloordiv_slot";
+        break;
+
+    case itruediv_slot:
+        sn = "itruediv_slot";
         break;
 
     case iand_slot:
@@ -8949,8 +8997,8 @@ static const char *slotName(slotType st)
         sn = "cmp_slot";
         break;
 
-    case nonzero_slot:
-        sn = "nonzero_slot";
+    case bool_slot:
+        sn = "bool_slot";
         break;
 
     case neg_slot:
@@ -8971,6 +9019,10 @@ static const char *slotName(slotType st)
 
     case hash_slot:
         sn = "hash_slot";
+        break;
+
+    case index_slot:
+        sn = "index_slot";
         break;
 
     default:
@@ -10436,6 +10488,7 @@ static void generateFunctionCall(classDef *cd,classDef *ocd,overDef *od,
             break;
 
         case div_slot:
+        case truediv_slot:
             generateNumberSlotCall(od,"/",fp);
             break;
 
@@ -10478,6 +10531,7 @@ static void generateFunctionCall(classDef *cd,classDef *ocd,overDef *od,
             break;
 
         case idiv_slot:
+        case itruediv_slot:
             generateBinarySlotCall(cd, od, "/=", deref, fp);
             break;
 
@@ -11824,6 +11878,7 @@ void prOverloadName(FILE *fp, overDef *od)
         break;
 
     case div_slot:
+    case truediv_slot:
         pt2 = "/";
         break;
 
@@ -11864,6 +11919,7 @@ void prOverloadName(FILE *fp, overDef *od)
         break;
 
     case idiv_slot:
+    case itruediv_slot:
         pt2 = "/=";
         break;
 
